1.0.6 (15.08.2012):

* Fixed cropping when selector tool not active or page not selected
  Closes bug 3544597 (crop tool not working)
* Fixed renumber dialog
  Closes bug 3545151 (renumber not working in version 1.0.5)


1.0.5 (15.07.2012):

* Allow new processes to be started after pressing cancel button
* Fixed paste menu
  Closes bug 3517797 (Copy and paste no longer work)
* Pad scans which have less data than their headers announce with blanks
  Closes bug 3480247 (No image from HP6500A ADF)
* Fix unpaper when used as part of scan process
  Closes Debian bug #670640 (Can't call method get_cmdline)
* Sort OCR languages in ComboBoxes
* Deal with non-UTF-8 output from OCR. Closes Debian bug #670831
  (gscan2pdf is not resilient against non utf-8 from tesseract)
* Fix Email to PDF with kmail
  Closes bug 3487790 (suse 12.1 emails no pdf)
* Fix updating widgets in scanimage dialog
  Closes debian bug #678911
  (Device-dependent options disappear after selecting Lineart mode)
* + Gujarati translation (thanks to Vishal Goswami)
* Update to Brazilian Portuguese translation (thanks to Arthur Rodrigues)
* Update to Simplified Chinese translation (thanks to Wang Dianjin)
* Update to Czech translation (thanks to Zbyněk Schwarz)
* Update to German translation (thanks to Dennis Baudys)
* Update to Hungarian translation (thanks to Herczeg Zsolt)
* Update to Japanese translation (thanks to Shushi Kurose)
* Update to Polish translation (thanks to Wojciech Górnaś)
* Update to Spanish translation (thanks to Adolfo Jayme Barrientos)
* Update to Swedish translation (thanks to Tobias Holm)


1.0.4 (11.04.2012):

* Fixed Clean Up (unpaper) dialog


1.0.3 (08.04.2012):

* Refactor switch usage to satisfy Perl 5.10.
  Closes bug 3514239 (gscan2pdf won't load)
* Support page-width and page-height options with libsane-perl frontend
  Closes bug 3441159 (Page size cannot be changed)
  Closes bug 3052205 (Cannot set paper size)
* Update to Russian translation (thanks to Oleg Koptev)

