@@ -4,6 +4,7 @@
   Closes bug 3544597 (crop tool not working)
 * Fixed renumber dialog
   Closes bug 3545151 (renumber not working in version 1.0.5)
+* Fixed keyboard entry in dialog boxes
 
 
 1.0.5 (15.07.2012):
